# multiqc-cpp

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.ci.txt  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: build-release.yml  ci-cd.yml
benchmarks/: README.md  run_benchmarks.sh
docs/: CI_CD.md  DEVELOPMENT.md
packaging/linux/: AppImageBuilder.yml  multiqc-cpp.desktop
packaging/windows/: install.sh
scripts/: format.sh  tidy.sh
src/fastp/: CMakeLists.txt
src/mqc/: CMakeLists.txt  cli.cpp  cli.hpp  main.cpp
src/mqc/core/: config.cpp  config.hpp  file_search.cpp  file_search.hpp  module.cpp  module.hpp  report.cpp  report.hpp
src/mqc/modules/bowtie2/: bowtie2_module.cpp  bowtie2_module.hpp
src/mqc/modules/fastp/: fastp_module.cpp  fastp_module.hpp
src/mqc/modules/fastqc/: fastqc_module.cpp  fastqc_module.hpp
src/mqc/modules/picard/: picard_module.cpp  picard_module.hpp
src/mqc/modules/samtools/: samtools_module.cpp  samtools_module.hpp
tests/: CMakeLists.txt
tests/unit/: test_file_search.cpp  test_module.cpp
